Enchanced UI and Some chat functionalities

--- a/client/ChatApp/package.json
+++ b/client/ChatApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-app-client",
+  "name": "chatapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -21,6 +23,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.11"
+    "vite": "^5.2.0"
   }
 }
